CM-3 | Add libraries

--- a/tools/jupyterlab/Dockerfile
+++ b/tools/jupyterlab/Dockerfile
@@ -1,3 +1,4 @@
 FROM nngguyenanh/jupyterlab:latest
 
 RUN pip3 install python-dotenv binance-connector matplotlib
+RUN pip3 install keras tenserflow 
